ProTwo users page task complete (displaying generated users from db)

--- a/Init_Django_Project/proTwo/templates/helpapp/helppage.html
+++ b/Init_Django_Project/proTwo/templates/helpapp/helppage.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Help page</title>
+    <link rel="stylesheet" href="{% static "bootstraps/bootstrap.css"%}">
   </head>
   <body>
     <h1>Hello, this is the help page</h1>
