--- a/Init_Django_Project/proTwo/templates/home/homepage.html
+++ b/Init_Django_Project/proTwo/templates/home/homepage.html
@@ -10,6 +10,7 @@
     <h1> THIS IS THE NEW HOME PAGE</h1>
 
     {{insert_this}}
-      <h3>Go to /users to see the list of user information</h3>
+      <h3>Go to /users to see the list of user information or click here</h3>
+      <a href="{% url 'appTwo:users'%}"> this thing</a>
   </body>
 </html>
