--- a/Init_Django_Project/proTwo/templates/helpapp/helppage.html
+++ b/Init_Django_Project/proTwo/templates/helpapp/helppage.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-{% load static %}
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Help page</title>
-    <link rel="stylesheet" href="{% static "bootstraps/bootstrap.css"%}">
-  </head>
-  <body>
+{% extends 'home/base.html' %}
+{% block body_block %}
+
     <h1>Hello, this is the help page</h1>
     {{something_here}}
-
-  </body>
-</html>
+ <a href="{% url 'signup'%}"> GO TO Signup HELLO</a>
+  {% endblock %}
+  
