--- a/Init_Django_Project/cbv/simple_app/templates/simple_app/school_list.html
+++ b/Init_Django_Project/cbv/simple_app/templates/simple_app/school_list.html
@@ -10,5 +10,8 @@
   </h2>
   {%endfor%}
 </ol>
+<h3>Add school</h3>
+  <a class="btn btn-primary btn-lg" href="{% url 'simple_app:createschool'%}">School</a>
+
 
 {% endblock %}
