Completed Crud (added delete functionality),(removed bugs)

--- a/Init_Django_Project/cbv/simple_app/templates/simple_app/school_details.html
+++ b/Init_Django_Project/cbv/simple_app/templates/simple_app/school_details.html
@@ -15,6 +15,7 @@
 
 
     <a class="btn btn-primary btn-lg" href="{% url 'simple_app:updateschool' pk=schools_detail.pk%}">Update School</a>
+    <a class="btn btn-danger btn-lg" href="{% url 'simple_app:delete' pk=schools_detail.pk%}">Delete School</a>
 
 </div>
 
