--- a/Init_Django_Project/cbv/simple_app/templates/simple_app/student_details.html
+++ b/Init_Django_Project/cbv/simple_app/templates/simple_app/student_details.html
@@ -14,6 +14,8 @@
 
       <a class="btn btn-primary btn-lg" href="{% url 'simple_app:updatestudent' pk=students_detail.pk %}">Update Student</a>
 
+      <a class="btn btn-danger btn-lg" href="{% url 'simple_app:deletestudent' pk=students_detail.pk %}">Delete Student</a>
+
 
 </div>
 
