--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Blog</title>
+
+    <!-- bootstrap cdn -->
+
+    <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
+    <!-- medium editor style -->
+    <script src="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
+
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="{% static "css/blog.css"%}">
+
+    <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+
+
+
   </head>
   <body>
-    <h1> The blog</h1>
-{% block body_block %}
-{% endblock %}
+
+    <!-- nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light techfont">
+  <a class="navbar-brand bigbrand" href="{% url 'post_list'%}">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{%url "about"%}">About <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{%url "https://github.com/oluwatobi1"%}">Github <span class="sr-only">(current)</span></a>
+      </li><li class="nav-item active">
+        <a class="nav-link" href="{%url "about"%}">Extra <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav nav_right">
+      {% if user.is_authenticated %}
+      {%endif%}
+      <li class="nav-item active">
+        <a class="nav-link" href="{%url "post_new"%}">New POST <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+          <a class="nav-link" href="{%url "post_draft"%}">New Draft <span class="sr-only">(current)</span></a>
+        </li>
+         <li class="nav-item active">
+            <a class="nav-link" href="{%url "Logout"%}">Logout <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+             <a> Welcome {{user.username}}</a>
+           </li>
+           {%else%}
+           <li>
+             <a href="{% url 'login'%}">
+                <span class="glyphicon glyphicon-user"></span>
+             </a>
+           </li>
+    </ul>
+
+</div>
+</nav>
+
+<div class="container">
+
+  {% block body_block %}
+
+
+  {% endblock %}
+</div>
 
   </body>
 </html>
