--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
@@ -1,4 +1,59 @@
 {%extends 'blog_app/base.html'%}
 {% block body_block%}
+<h1 class="posttitle loader"> {{ post.title }}</h1>
+
+
+
+
+{% if post.publish_date %}
+<div class="postpublishdate">
+  {{post.publish_date}}
+
+</div>
+{% else %}
+  <a class="btn btn-primary" href="{% url 'post_publish' pk = post.pk%}"> Publish</a>
+{% endif %}
+
+<p class="postcontent">{{ post.title|safe|linebreaksbr}}</p>
+{% if user.is_authenticated%}
+<a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk%}">
+<span class="glyphicon glyphicon-pencil"></span>
+</a>
+
+<a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk%}">
+<span class="glyphicon glyphicon-remove"></span>
+</a>
+{%endif%}
+
+<hr>
+<a class="btn btn-primary" href="{% url 'add_comments_to_post' pk=post.pk%}"> Add comments</a>
+
+<div class="container">
+  {%for comment in post.comment.all%}
+    {%if user.is_authenticated or comment.approve_comment%}
+      {{comment.create_date}}
+
+      {% if not comment.approve_comment%}
+        <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk%}">
+        <span class="glyphicon glyphicon-ok"></span>
+        </a>
+
+        <a class="btn btn-primary" href="{% url 'comment_delete' pk=comment.pk%}">
+        <span class="glyphicon glyphicon-remove"></span>
+        </a>
+      {%endif%}
+
+      <p>{{comment.text|safe|linebreaks}}</p>
+      <p>Posted by: {{comment.author}}</p>
+
+    {%endif%}
+
+    {%empty%}
+    <p>No comments </p>
+
+
+  {%endfor%}
+
+</div>
 
 {% endblock %}
