--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
@@ -1,4 +1,22 @@
 {%extends 'blog_app/base.html'%}
 {% block body_block%}
 
+<div class="centerstage">
+  <h1>All Posts</h1>
+  {% for post in post_list%}
+  <div class="post">
+    <h3><a href="{% url 'post_detail' pk = post.pk%}"></a>{{post.title}}</h3>
+    <div class="date">
+      <p>Published on {{post.publish_date|date:"D M Y"}}</p>
+
+    </div>
+    <a href="{% url 'post_detail', pk = post.pk%}"> {{post.comment_approve.count }}</a>
+  </div>
+
+
+  {%endfor%}
+</div>
+
+
+
 {% endblock %}
