--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_confirm_delete.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_confirm_delete.html
@@ -1,4 +1,11 @@
 {%extends 'blog_app/base.html'%}
 {% block body_block%}
 
+<form method="post">
+  {%csrf_token%}
+  <p>Are you sure you want to delete {{ object }}</p>
+  <input type="submit" class="btn btn-danger" value="Delete">
+  <a href="{%url 'post_detail' pk = post.pk%}" class="btn btn-outline-info"> Cancel</a>
+</form>
+
 {% endblock %}
