--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_form.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_form.html
@@ -1,4 +1,15 @@
 {%extends 'blog_app/base.html'%}
 {% block body_block%}
 
+<h1>New Post</h1>
+
+<form class="post-new" method="POST">
+
+  {%csrf_token%}
+  {{form.as_p}}
+  <button type="submit" class="save btn btn-default">Save</button>
+</form>
+
+<script>var editor = new MediumEditor('.editable');</script>
+
 {% endblock %}
