--- a/Init_Django_Project/Blog_Project/project/blog_app/static/css/blog.css
+++ b/Init_Django_Project/Blog_Project/project/blog_app/static/css/blog.css
@@ -12,6 +12,28 @@
 .bigbrand{
   font-size: 1.5em};
 
+.post-date{
+  text-align: center;
+}
+
+.post-title{
+  font-family: 'Playfair Display', serif;
+  font-size: 2em;
+  text-align: center;
+
+}
+
+.post-content{
+  font-family: 'Montserrat';
+  font-size: 1.5em;
+}
+
+.btn-comment{
+  position: absolute;
+  right: 0px;
+}
+
+
 .loader {
   filter:hue-rotate(0deg);
   color:linear-gradient(45deg,#0f8,#08f);
