Blog: removed bugs on glyphicons and bootstrap

--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
@@ -4,13 +4,13 @@
 <div class="centerstage">
   <h1>All Posts</h1>
   {% for post in post_list%}
-  <div class="post">
-    <h3><a href="{% url 'post_detail' pk = post.pk%}"></a>{{post.title}}</h3>
+  <div class="posta">
+    <h3><a href="{% url 'post_detail' pk=post.pk%}"></a>{{post.title}}</h3>
     <div class="date">
       <p>Published on {{post.publish_date|date:"D M Y"}}</p>
 
     </div>
-    <a href="{% url 'post_detail', pk = post.pk%}"> {{post.comment_approve.count }}</a>
+    <a href="{% url 'post_detail' pk=post.pk%}"> {{post.comment_approve.count }}</a>
   </div>
 
 
