--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
@@ -1,5 +1,7 @@
 {%extends 'blog_app/base.html'%}
+
 {% block body_block%}
+
 <h1 class="posttitle loader"> {{ post.title }}</h1>
 
 
@@ -11,17 +13,17 @@
 
 </div>
 {% else %}
-  <a class="btn btn-primary" href="{% url 'post_publish' pk = post.pk%}"> Publish</a>
+  <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk%}"> Publish</a>
 {% endif %}
 
 <p class="postcontent">{{ post.title|safe|linebreaksbr}}</p>
 {% if user.is_authenticated%}
 <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk%}">
-<span class="glyphicon glyphicon-pencil"></span>
+<span class="fa fa-pencil"></span>
 </a>
 
-<a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk%}">
-<span class="glyphicon glyphicon-remove"></span>
+<a class="btn btn-primary" href="{% url 'post_delete' pk=post.pk%}">
+<span class="fa fa-remove"></span>
 </a>
 {%endif%}
 
