Blog: Working blog  inished debugging site errors

--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
@@ -5,7 +5,7 @@
   <h1>All Posts</h1>
   {% for post in post_list%}
   <div class="posta">
-    <h3><a href="{% url 'post_detail' pk=post.pk%}"></a>{{post.title}}</h3>
+    <h3><a href="{% url 'post_detail' pk=post.pk%}">{{post.title}}</a></h3>
     <div class="date">
       <p>Published on {{post.publish_date|date:"D M Y"}}</p>
 
