--- a/Init_Django_Project/Blog_Project/project/blog_app/static/css/blog.css
+++ b/Init_Django_Project/Blog_Project/project/blog_app/static/css/blog.css
@@ -23,9 +23,10 @@
 
 }
 
-.post-content{
+.postcontent{
   font-family: 'Montserrat';
   font-size: 1.5em;
+  border: solid black 0.005em;
 }
 
 .btn-comment{
@@ -33,7 +34,9 @@
   right: 0px;
 }
 
-
+.text{
+  border: 2px black solid;
+}
 .loader {
   filter:hue-rotate(0deg);
   color:linear-gradient(45deg,#0f8,#08f);
