--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
@@ -34,7 +34,7 @@
     <!-- nav bar -->
 
     <nav class="navbar navbar-expand-lg  techfont">
-      <a class="navbar-brand bigbrand" href="{% url "post_list"%}" >Navbar</a>
+      <a class="navbar-brand bigbrand" href="{% url "post_list"%}" >Posts</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -57,7 +57,7 @@
               <a class="nav-link" href="{%url "post_new"%}">New POST <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{%url "post_draft"%}">New Draft <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{%url "post_draft"%}">Drafts <span class="sr-only">(current)</span></a>
               </li>
                <li class="nav-item active">
                   <a class="nav-link" href="{%url "logout"%}">Logout <span class="sr-only">(current)</span></a>
