--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
@@ -1,9 +1,9 @@
 {%extends 'blog_app/base.html'%}
 
 {% block body_block%}
+<h1>post details page</h1>
 
-<h1 class="posttitle loader"> {{ post.title }}</h1>
-
+<h1 class="posttitle loader">Title: {{ post.title }}</h1>
 
 
 
@@ -13,10 +13,11 @@
 
 </div>
 {% else %}
-  <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk%}"> Publish</a>
+  <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk%}">Publish</a>
 {% endif %}
 
-<p class="postcontent">{{ post.title|safe|linebreaksbr}}</p>
+<h3>Body</h3>
+<p>{{ post.title|safe|linebreaksbr}}</p>
 {% if user.is_authenticated%}
 <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk%}">
 <span class="fa fa-pencil"></span>
@@ -37,11 +38,11 @@
 
       {% if not comment.approve_comment%}
         <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk%}">
-        <span class="glyphicon glyphicon-ok"></span>
+        <span class="fa fa-ok"></span>
         </a>
 
         <a class="btn btn-primary" href="{% url 'comment_delete' pk=comment.pk%}">
-        <span class="glyphicon glyphicon-remove"></span>
+        <span class="fa fa-remove"></span>
         </a>
       {%endif%}
 
