--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_draft_list.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_draft_list.html
@@ -1,15 +1,15 @@
 {%extends 'blog_app/base.html'%}
 {% block body_block%}
-  {% for pst in post%}
-  <div class="post-draft">
-    <p>Created on: {{pst.create_date|date:'d-m-Y'}}</p>
+<h1>Welcome to Post draft list page</h1>
+  {%for post in post_drafts%}
+  <div class="postdraft">
+    <p>Created on: {{post.create_date|date:'d-m-Y'}}</p>
     <h1>
-      <a href="{% url 'post_detail' pk = pst.pk%}"> {{pst.title}}</a>
+      <a href="{% url 'post_detail' pk=post.pk%}"> {{post.title}}</a>
     </h1>
-    <p>{{pst.text|truncatedchars:200}}</p>
+    <p>{{post.text|safe|truncatechars:200}}</p>
 
   </div>
-
   {% endfor%}
 
 {% endblock %}
