--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_list.html
@@ -10,7 +10,7 @@
       <p>Published on {{post.publish_date|date:"D M Y"}}</p>
 
     </div>
-    <a href="{% url 'post_detail' pk=post.pk%}"> {{post.comment_approve.count }}</a>
+    <a href="{% url 'post_detail' pk=post.pk%}">Comments: {{post.approve_comment.count }}</a>
   </div>
 
 
