--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/base.html
@@ -63,7 +63,7 @@
                   <a class="nav-link" href="{%url "logout"%}">Logout <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                   <a> Welcome {{user.username}}</a>
+                     <p class="nav-link"> Welcome {{user.username}}</p>
                  </li>
             {%else%}
                  <li>
