--- a/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
+++ b/Init_Django_Project/Blog_Project/project/blog_app/templates/blog_app/post_detail.html
@@ -1,62 +1,70 @@
 {%extends 'blog_app/base.html'%}
 
 {% block body_block%}
-<h1>post details page</h1>
 
-<h1 class="posttitle loader">Title: {{ post.title }}</h1>
+<div class="postdetailspage">
+
+  <h1 class="posttitle loader centeritem">Title: {{ post.title }}</h1>
 
 
 
-{% if post.publish_date %}
-<div class="postpublishdate">
-  {{post.publish_date}}
+  {% if post.publish_date %}
+  <div class="postpublishdate centeritem">
+    {{post.publish_date}}
 
-</div>
-{% else %}
-  <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk%}">Publish</a>
-{% endif %}
-
-<h3>Body</h3>
-<p>{{ post.title|safe|linebreaksbr}}</p>
-{% if user.is_authenticated%}
-<a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk%}">
-<span class="fa fa-pencil"></span>
-</a>
-
-<a class="btn btn-primary" href="{% url 'post_delete' pk=post.pk%}">
-<span class="fa fa-remove"></span>
-</a>
-{%endif%}
+  </div>
+  {% else %}
+    <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk%}">Publish</a>
+  {% endif %}
 
 <hr>
-<a class="btn btn-primary" href="{% url 'add_comments_to_post' pk=post.pk%}"> Add comments</a>
+  <div class="centeritem">
+    <p>{{post.text|safe|linebreaksbr}}</p>
 
-<div class="container">
-  {%for comment in post.comment.all%}
-    {%if user.is_authenticated or comment.approve_comment%}
-      {{comment.create_date}}
+  </div>
+  {% if user.is_authenticated%}
+  <a class="btn btn-primary centeritem" href="{% url 'post_edit' pk=post.pk%}">
+  <span class="fa fa-pencil"></span>
+  </a>
 
-      {% if not comment.approve_comment%}
-        <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk%}">
-        <span class="fa fa-ok"></span>
-        </a>
+  <a class="btn btn-primary centeritem" href="{% url 'post_delete' pk=post.pk%}">
+  <span class="fa fa-remove"></span>
+  </a>
 
-        <a class="btn btn-primary" href="{% url 'comment_delete' pk=comment.pk%}">
-        <span class="fa fa-remove"></span>
-        </a>
+  {%endif%}
+
+  <hr>
+  <a class="btn btn-primary" href="{% url 'add_comments_to_post' pk=post.pk%}"> Add comments</a>
+
+  <div class="container">
+    {%for comment in post.comments.all%}
+    <br>
+      {%if user.is_authenticated or comment.approve_comment%}
+        {{comment.create_date}}
+
+
+        {% if not comment.approved_comment%}
+          <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk%}">
+          <span class="fa fa-check"></span>
+          </a>
+
+          <a class="btn btn-primary" href="{% url 'comment_delete' pk=comment.pk%}">
+          <span class="fa fa-remove"></span>
+          </a>
+        {%endif%}
+
+
       {%endif%}
-
       <p>{{comment.text|safe|linebreaks}}</p>
       <p>Posted by: {{comment.author}}</p>
 
-    {%endif%}
-
-    {%empty%}
-    <p>No comments </p>
+      {%empty%}
+      <p>No comments </p>
 
 
-  {%endfor%}
+    {%endfor%}
+
+  </div>
 
 </div>
-
 {% endblock %}
